--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
             Cloud Study and Hands On
         </h2>
     </div>
-    <span>    
+    <span>
+    <h1>Upload single file with fields</h1>
+    <form action="/api/upload/img" method="post" enctype="multipart/form-data">
+        Name: <input type="text" name="name"><br>
+        Files: <input type="file" name="file"><br><br>
+        <input type="submit" value="Submit">
+    </form>    
 </body>
 </html>
